--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,7 +7,7 @@
           alt="github logo"
         />
         <h4>{{ user.name }} {{ user.lastname }}</h4>
-        <p>{{ user.nic }}</p>
+        <p>{{ user.nick }}</p>
       </div>
     </a>
   </div>
